ISSUE-823 Fix an annoying IDE red warning
IDE seems not like that Java Map -> Scala Map.